@@ -1,3 +1,8 @@
+2009-02-28  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/tkWindow.c: [Bug 2645457] check for dead windows after
+	calling Tk_MakeWindowExist to avoid a crash when mapping dead windows.
+
 2008-02-06  Daniel Steffen  <das@users.sourceforge.net>
 
 	* generic/tkImgPhoto.c:		fix leaks discovered with the Mac OS X
